# my_project7

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
my_project7/dataset/: make_dataset.py
my_project7/features/: build_features.py
my_project7/models/: deep_api.py
my_project7/tests/: test_unit_model.py
my_project7/visualization/: visualize.py
notebooks/: 1.0-my_project7_start.ipynb
