# -*- coding: utf-8 -*-
[metadata]
name = my_project7
summary = try
description-file =
    README.md
author = Adnane
author-email = adnane.oussayer@gmail.com
version = 0.0.1
license = BSD-3-Clause
home-page = https://github.com/Adnane-DS/my_project7
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    my_project7

[entry_points]

deepaas.v2.model = 
    my_project7 = my_project7.models.deep_api

